Fixed post note z-index

--- a/public_html/css/post.css
+++ b/public_html/css/post.css
@@ -223,6 +223,7 @@
 .post-note .text-wrapper {
 	position: absolute;
 	display: none;
+	z-index: 10;
 	top: calc(100%);
 	left: -1px;
 	padding-top: 0.5em;
